<resources>
    <string name="app_name">Techuva IoT</string>
    <string name="customer_login_txt">Customer Login</string>
    <string name="in_celsius">in Celsius</string>
    <string name="chillar_1">Chillar-1</string>
    <string name="thermostat">Thermostat</string>
    <string name="single_phasing">Single Phasing</string>
    <string name="low_pressure">Low Pressure</string>
    <string name="high_pressure">High Pressure</string>
    <string name="compressor_olr">Compressor OLR</string>
    <string name="primary_pump_olr">Primary Pump OLR</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Already Have Account? Click Here</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date_txt">Date</string>
    <string name="submit">Submit</string>
    <string name="smile">\ue9e1</string>
    <string name="icon_prefix">&#92;u</string>
    <string name="icon_high_voltage">\ue902</string>
    <string name="http_error">http error</string>
    <string name="error_connecting_error">error connecting server</string>
    <string name="error_passing_data">error passing data</string>
    <string name="error_unexpected">unexpected error</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="history">History</string>
    <string name="time_txt">Time</string>
    <string name="time_txt_caps">TIME</string>
    <string name="value_txt">Value</string>
    <string name="refresh">Refresh</string>
    <string name="dummy_device_num">TFJKKK000000000000</string>
    <string name="dummy_date">Nov-2018</string>
    <string name="loading">Loading...</string>
    <string name="something_went_wrong">Something went wrong</string>

    <string name="closedrawer">closedrawer</string>
    <string name="opendrawer">opendrawer</string>
    <string name="server_error">Error connecting server</string>
    <string name="get_data">Get Data</string>
    <string name="search_txt">Search</string>
    <string name="last_sync">Last sync:</string>
    <string name="txt_copyright"> Techuva Solutions Pvt. Ltd.</string>
    <string name="email_id">Email ID</string>
    <string name="click_here_forgot_password"><u>Click Here</u></string>
    <string name="error_connecting_server">Error connecting server</string>
    <string name="btn_prev">Previous</string>
    <string name="next">Next</string>
    <string name="data_not_found">Data not available</string>
    <string-array name="navdraweritemsafterlogin">
        <item>Home</item>
        <item>Devices</item>
        <item>Device History</item>
        <item>Manage Threshold</item>
        <!--<item>Forewarning Details</item>
        <item>Terms &amp; Conditions</item>
        <item>Privacy Policy</item>
        <item>IOT Products</item>
        <item>Report Issue</item>-->
        <item>Logout</item>
    </string-array>

    <!--Side panel item name string array after login-->
    <string-array name="navdraweritemsbeforelogin">
        <item>Devices</item>
        <item>Device History</item>
        <item>Manage Threshold</item>
        <item>About App</item>
        <item>Terms and Conditions</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_user_accounts">Techuva IoT</string>
    <string name="login_success">You have successfully logged in!</string>
    <string name="account_confirmation">Your email is linked with multiple accounts, so you have to choose the account before you proceed!</string>
    <string name="account_confirmation2">so you have to choose the Account before you Proceed!</string>
    <string name="txt_continue">Continue</string>
    <string name="select_device">Please select a default device.</string>
    <string name="default_device_select">Do you want to set this device as default?</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="permission_necessary">Permission Requested</string>
    <string name="storage_permission_is_encessary_to_wrote_event">Please provide the storage permission..</string>
    <string name="yes">Yes</string>
    <string name="enter_email">Please enter Email Id</string>
    <string name="enter_reg_email">Please enter registered Email Id</string>
    <string name="alert">Alert</string>
    <string name="success">Success</string>
    <string name="title_activity_data_graph">DataGraphActivity</string>
    <string name="graph">Graph</string>
    <string name="nodata">No data found for selected date.</string>
    <string name="forwarning">Forwarning</string>
    <string name="token_expire">Session Expired/ Invalid Access</string>
    <string name="to_re_login">to Re-login</string>
    <string name="consumed_units">Consumed Units :</string>
    <string name="units">Units</string>
    <string name="kwh">KWH</string>
    <string name="current_minimum">Current Minimum</string>
    <string name="current_maximum">Current Maximum</string>
    <string name="set_minimum">Set Min</string>
    <string name="set_maximum">Set Max</string>
    <string name="set_threshold">Update</string>
    <string name="na">-NA-</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="zero">00</string>
    <string name="channel_id">Channel Number</string>
    <string name="channel">Channel</string>
    <string name="label">Label</string>
    <string name="add_threshold">Add Threshold</string>
    <string name="select_channel">Select channel</string>
    <string name="threshold_name">Threshold Name</string>
    <string name="threshold_value">Threshold Value</string>
    <string name="save">Save</string>
    <string name="new_threshold">New Threshold</string>
    <string name="close">Close</string>
    <string name="threshold_history">Threshold History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dg_on">DG ON</string>
    <string name="dg_off">DG OFF</string>
    <string name="dg_reset">DG Reset</string>
    <string name="dg_operation_mode">DG Operation Mode</string>
    <string name="auto_semi_mode">Auto/Semi Mode</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="dg_on_off_status">DG ON/OFF Status</string>
    <string name="voltage_mains">Voltage (Mains)</string>
    <string name="voltage_dg">Voltage (DG)</string>
    <string name="l1">L1</string>
    <string name="current">Current</string>
    <string name="l2">L2</string>
    <string name="l3">L3</string>
    <string name="dg_on_txt">Are you sure you want to ON the DG</string>
    <string name="dg_off_txt">Are you sure you want to OFF the DG</string>
    <string name="dg_reset_txt">Are you sure you want change the DG control to AUTO mode?</string>
    <string name="last_sync_">Last Sync</string>
    <string name="voltage_no_data">Couldn\'t Find Voltage Details</string>
    <string name="dg_voltage_no_data">Couldn\'t Find DG Voltage Details</string>
    <string name="current_no_details">Couldn\'t Find Current Details</string>
    <string name="provisioned">Provisioned</string>
    <string name="manjeera_water_flow">Manjeera Water Flow (L)</string>
    <string name="ground_water_flow">Ground Water Flow (L)</string>
    <string name="label_name">Label_name</string>
    <string name="received_at">Received \nAt</string>
    <string name="minute_flow">Minute Flow</string>
    <string name="hourly_flow">Hourly Flow</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact">Contact Number</string>
    <string name="on_off_motor">ON/OFF\nMotor</string>
    <string name="motor_on_off_summary">Motor ON/Off\nSummary</string>
    <string name="device_details">Device\nDetails</string>
    <string name="motor_operation_mode">Motor Operation Mode</string>
    <string name="auto_remote">Auto/Remote</string>
    <string name="manual">Manual</string>
    <string name="manual_neutral">Manual/Neutral</string>
    <string name="motor_on_off_status">Motor ON/OFF Status</string>
    <string name="motor_on">Motor ON</string>
    <string name="motor_off">Motor OFF</string>
    <string name="motor_on_off_reason">Motor ON/OFF Reason</string>
    <string name="auto">Auto</string>
    <string name="remote">Remote</string>
    <string name="motor_airlock">Motor Airlock</string>
    <string name="neutral">Neutral</string>
    <string name="confirmation">Confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="motor_on_confirmation">Are you sure, You want to Switch ON the Motor Remotely?</string>
    <string name="motor_off_confirmation">Are you sure, You want to Switch OFF the Motor Remotely?</string>
    <string name="device_history">Device\n History</string>
    <string name="update_channel_information">Update Channel Information</string>
    <string name="channel_label">Channel Label</string>
    <string name="channel_max_value">Channel Max Value</string>
    <string name="channel_min_value">Channel Min Value</string>
    <string name="unit_of_measure">Unit of Measure</string>

</resources>
