<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/view_margin"
    android:id="@+id/ll_main">
        <TextView
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/channel"
            android:id="@+id/tv_channel_id"
            android:textColor="@color/text_color_dark"
            android:gravity="center"
            />
        <TextView
            android:layout_weight="1.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_txt"
            android:id="@+id/tv_notification_time"
            android:textColor="@color/text_color_dark"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label"
            android:id="@+id/tv_channel_label"
            android:textColor="@color/text_color_dark"
            android:gravity="center"
            />
    </LinearLayout>

