<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ConsumedUnitDetailsActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/toolbar_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ll_back_btn">
                <ImageView
                    android:layout_width="@dimen/activity_profile_margin"
                    android:layout_height="@dimen/activity_profile_margin"
                    android:src="@drawable/back"
                    android:contentDescription="@string/app_name"
                    android:id="@+id/iv_back_btn"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/view_margin"
                    android:layout_marginLeft="@dimen/view_margin"/>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <devs.mulham.horizontalcalendar.HorizontalCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:textColorSelected="#FFFF"
        app:selectorColor="@color/white"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rcv_days_data"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_five"
        android:background="@color/colorPrimary"
        android:id="@+id/ll_headers">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_txt"
            android:padding="@dimen/margin_five"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_textSize_small_16"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kwh"
            android:padding="@dimen/margin_five"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_textSize_small_16"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/units"
            android:padding="@dimen/margin_five"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_textSize_small_16"
            android:gravity="center"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rcv_consumed_data"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nodata"
        android:id="@+id/tv_nodata"
        android:visibility="visible"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/activity_textSize_small"/>
</LinearLayout>