<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HBLNotificationActivity"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/toolbar_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ll_back_btn">
                <ImageView
                    android:layout_width="@dimen/activity_profile_margin"
                    android:layout_height="@dimen/activity_profile_margin"
                    android:src="@drawable/back"
                    android:contentDescription="@string/app_name"
                    android:id="@+id/iv_back_btn"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/view_margin"
                    android:layout_marginLeft="@dimen/view_margin"/>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="@string/app_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fl_main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginRight="@dimen/view_margin"
                android:layout_marginTop="@dimen/margin_five"
                android:layout_marginBottom="@dimen/margin_five">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textSize="@dimen/activity_textSize_large"
                    android:layout_weight="1.2"
                    android:id="@+id/tv_notification_heading"/>
                <TextView
                    android:layout_weight="0.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="@dimen/activity_textSize_large"
                    android:id="@+id/tv_notification_count"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin_two"
                    android:layout_marginRight="@dimen/margin_two"
                    android:background="@drawable/circle_background_names"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ll_threshold_values">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/view_margin">

                    <TextView
                        android:id="@+id/tv_channel_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="@string/channel"
                        android:textColor="@color/white" />
                    <TextView
                        android:layout_weight="1.3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time_txt"
                        android:id="@+id/tv_notification_time"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label"
                        android:id="@+id/tv_channel_label"
                        android:textColor="@color/white"
                        android:gravity="center"
                        />
                </LinearLayout>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rcv_threshold"/>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</LinearLayout>