<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techuva.iot.activity.ForgetPasswordActivity"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:id="@+id/ll_root_view_forgot">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/ll_layout_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textAllCaps="true"
                android:letterSpacing="0.1"
                android:padding="@dimen/elarge_view_margin"
                android:text="@string/forgot_password"
                android:textSize="@dimen/activity_textSize_small"
                android:textColor="@color/white"
                tools:targetApi="lollipop" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/two_side_border">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/iv_userNameforgot"
                        app:srcCompat="@drawable/user"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/large_view_margin"
                        android:paddingBottom="@dimen/large_view_margin"
                        android:paddingLeft="@dimen/margin_five"
                        android:paddingRight="@dimen/margin_five"
                        android:contentDescription="@string/app_name"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/large_view_margin"
                        android:paddingBottom="@dimen/large_view_margin"
                        android:paddingLeft="@dimen/margin_five"
                        android:paddingRight="@dimen/margin_five"
                        android:hint="@string/username"
                        android:background="@null"
                        android:textColorHint="@color/text_color_light"
                        android:textColor="@color/text_color_light"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:id="@+id/edt_username_forgot"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_button_submit"
            android:layout_below="@+id/ll_layout_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/large_view_margin"
            android:paddingBottom="@dimen/large_view_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:letterSpacing="0.1"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_textSize_small"
                android:text="@string/submit"
                android:padding="@dimen/margin_five"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_signin"
            android:layout_below="@+id/ll_button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/activity_textSize_extra_small"
                android:id="@+id/tv_forgotPassword"
                android:paddingStart="@dimen/view_margin"
                android:paddingEnd="@dimen/view_margin"
                android:paddingTop="@dimen/view_margin"
                android:paddingBottom="@dimen/view_margin"
                android:text="@string/sign_in"
                android:textColor="@color/text_color_light"
                android:background="@drawable/three_side_border"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>